--- a/app/src/main/res/layout/webpageactivity.xml
+++ b/app/src/main/res/layout/webpageactivity.xml
@@ -3,19 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:background="@color/lightgrey">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
+
         <Button
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Back"
             android:layout_marginBottom="16dp"
-            />
+            android:text="Back"
+            android:background="@drawable/bg_search"
+            android:textColor="#0B0A0A" />
 
         <WebView
             android:id="@+id/webView"
