--- a/app/src/main/res/layout/activity_request_form.xml
+++ b/app/src/main/res/layout/activity_request_form.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@id/title_form" />
 
     <EditText
-        android:id="@+id/enter_name"
+        android:id="@+id/requestname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -49,7 +49,7 @@
 
     <!-- Description Section -->
     <TextView
-        android:id="@+id/description_required"
+        android:id="@+id/requestdesciption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -58,10 +58,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.088"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enter_name" />
+        app:layout_constraintTop_toBottomOf="@+id/requestname" />
 
     <EditText
-        android:id="@+id/enter_description"
+        android:id="@+id/requestdescription1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -70,11 +70,11 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_required" />
+        app:layout_constraintTop_toBottomOf="@+id/requestdesciption" />
 
     <!-- Address Section -->
     <TextView
-        android:id="@+id/address_required"
+        android:id="@+id/requestaddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -83,10 +83,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.088"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enter_description" />
+        app:layout_constraintTop_toBottomOf="@+id/requestdescription1" />
 
     <EditText
-        android:id="@+id/enter_address"
+        android:id="@+id/requestaddress1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -95,7 +95,7 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/address_required" />
+        app:layout_constraintTop_toBottomOf="@+id/requestaddress" />
 
     <!-- Picture Section -->
     <TextView
@@ -108,7 +108,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enter_address" />
+        app:layout_constraintTop_toBottomOf="@+id/requestaddress1" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -121,7 +121,7 @@
         app:layout_constraintTop_toBottomOf="@id/picture_option">
 
         <ImageView
-            android:id="@+id/picture_placeholder"
+            android:id="@+id/picture_placeholder1"
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_marginEnd="8dp"
