--- a/app/src/main/res/layout/nav_header_navmenu.xml
+++ b/app/src/main/res/layout/nav_header_navmenu.xml
@@ -13,7 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/pfp"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:contentDescription="@string/nav_header_desc"
@@ -21,6 +21,7 @@
         app:srcCompat="@drawable/img_6" />
 
     <TextView
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
