--- a/app/src/main/res/layout/activity_navmenu.xml
+++ b/app/src/main/res/layout/activity_navmenu.xml
@@ -6,17 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:background="#DDE4D9">
+
 
     <include
         android:id="@+id/app_bar_navmenu"
         layout="@layout/main"
+        android:background="#DDE4D9"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="200dp"
+        android:background="#DDE4D9"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
