--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -9,6 +9,16 @@
     android:background="#DDE4D9"
     tools:context=".SignInActivity">
 
+    <ImageView
+        android:id="@+id/homeButtonSignIn"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="Home Button"/>
+
     <!-- Logo / Title -->
     <TextView
         android:id="@+id/Login_logo"
