--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,6 +8,15 @@
     android:layout_height="match_parent"
     android:background="#DDE4D9"
     tools:context=".SignUpActivity">
+    <ImageView
+        android:id="@+id/homeButtonSignUp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="Home Button"/>
 
     <!-- Logo / Title -->
     <TextView
@@ -101,7 +110,7 @@
         android:layout_marginTop="32dp">
 
         <Button
-            android:id="@+id/LoginButton"
+            android:id="@+id/LoginButton1"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginEnd="8dp"
