--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#808080</color>
     <color name ="lightgrey">#D9D9D9</color>
+    <color name="lightgreen">#DDE4D9</color>
+
 
 </resources>
